# pyPRISM

./: .gitattributes  .gitignore  .travis.yml  AGENTS.md  CHANGES.md  CLAUDE.md  CONTRIBUTING.md  DEV.md  ENV.sh  LICENSE  MANIFEST.in  README.md  TODO  check_dependencies.py  environment.yml  environment2.yml  environment3.yml  img  pyproject.toml  requirements-docs.txt  requirements.txt  setup.py  update_version.py  versiontools.py
.github/workflows/: docs.yml  publish_pypi.yml  tests.yml
binder/: requirements.txt
data/: BareComposite-Gr-alpha1.0.csv  LinearMelt-Gr-rho0.8.csv  LinearMelt-Gr-rho1.0.csv  LinearMelt-Sk-rho0.6.csv  LinearMelt-Sk-rho1.0.csv  Omega-DiscreteKoyama-N200.csv  Omega-MD-N200.csv  Omega-NFJC-N200.csv  RingMelt-Gr-N2000.csv  RingMelt-Gr-N500.csv
dev_nb/: MolClosure-ABDiblock.Testing.ipynb
docs/: Makefile  conf.py  contact.rst  contribute.rst  contributing.rst  convergence.rst  data_structures.rst  examples.rst  faq.rst  index.rst  install.rst  legal.rst  make.bat  matrix_array.rst  philosophy.rst  publications.rst  quickstart.rst  scprism.rst  tutorial.rst
docs/api/: pyPRISM.calculate.chi.rst  pyPRISM.calculate.pair_correlation.rst  pyPRISM.calculate.rst  pyPRISM.calculate.second_virial.rst  pyPRISM.calculate.spinodal_condition.rst  pyPRISM.calculate.structure_factor.rst  pyPRISM.closure.AtomicClosure.rst  pyPRISM.closure.Closure.rst  pyPRISM.closure.HyperNettedChain.rst  pyPRISM.closure.MolecularClosure.rst  pyPRISM.closure.PercusYevick.rst  pyPRISM.closure.ReferenceMolecularPercusYevick.rst  pyPRISM.closure.rst  pyPRISM.core.Density.rst  pyPRISM.core.Domain.rst  pyPRISM.core.MatrixArray.rst  pyPRISM.core.Space.rst  pyPRISM.core.Table.rst  pyPRISM.core.ValueTable.rst  pyPRISM.core.rst  pyPRISM.omega.DiscreteKoyama.rst  pyPRISM.omega.FreelyJointedChain.rst  pyPRISM.omega.FromArray.rst  pyPRISM.omega.FromFile.rst  pyPRISM.omega.Gaussian.rst  pyPRISM.omega.GaussianRing.rst  pyPRISM.omega.NoIntra.rst  pyPRISM.omega.rst  pyPRISM.potential.HardSphere.rst  pyPRISM.potential.LennardJones.rst  pyPRISM.potential.Potential.rst  pyPRISM.potential.WeeksChandlerAndersen.rst  pyPRISM.potential.rst  pyPRISM.rst  pyPRISM.trajectory.Debyer.rst  pyPRISM.trajectory.rst  pyPRISM.util.UnitConverter.rst  pyPRISM.util.rst  typyPRISM.Version.rst  typyPRISM.calculate.chi.rst  (+70 more)
docs/install/: dependencies.rst  documentation.rst  install.rst  manual.cli.rst  manual.cui.rst  noninstall.rst  quick.cli.rst  quick.cui.rst  trouble.rst  usage.rst  verify.rst
env/: add_pyprism.sh  py2.yml  py2_dev.yml  py3.yml  py3_dev.yml
examples/: CS1.LinearMelt.ipynb  CS2.BareComposite.ipynb  CS2.RingMelt.ipynb  CS3.BareComposite.ipynb  CS3.GraftedComposite.ipynb  CS4.GraftedComposite.ipynb  CS4.OmegaExamples.ipynb  CS5.BCPSolution.ipynb  CS5.Omega.ipynb  CS6.Blend.ipynb  CS7.BCPSolution.ipynb  CSX.SymmetricBlend.ipynb  CSZ.Blend.ipynb  CSZ.PolymerBlend.ipynb
examples/data/: BareComposite-Gr-alpha0.25.csv  BareComposite-Gr-alpha0.5.csv  LinearMelt-Gr-rho0.6.csv  LinearMelt-Sk-rho0.8.csv  Omega-DiscreteKoyama-N200.csv  Omega-DiscreteKoyama-N50.csv  Omega-MD-N200.csv  Omega-MD-N50.csv  Omega-NFJC-N200.csv  Omega-NFJC-N50.csv  RingMelt-Gr-N100.csv
nb/: CS1.LinearVsRingMelts.ipynb  CS1.RingMelts.ipynb  CS2.SymmetricBlend-Copy1.ipynb  CS2.SymmetricBlend-Copy2.ipynb  CS2.SymmetricBlend.ipynb  CalculatePRISMDev.ipynb  ClosureDev.ipynb  Demos.ipynb  DomainDev.ipynb  GeneralDev.ipynb  IntraMolCorr.ipynb  MatrixArrayDev.ipynb  PRISMDev-Copy1.ipynb  PRISMDev.ipynb  PotentialDev.ipynb  Sandbox.ipynb  SystemDev.ipynb  TableDev.ipynb
nb/py/: typyMagics.py
nb_dev/: CalculatePRISMDev.ipynb  ClosureDev.ipynb  DomainDev.ipynb  IntraMolCorr.ipynb  Koyama.ipynb  MatrixArrayDev.ipynb  OmegaDev.ipynb  PRISMDev.ipynb  PotentialDev.ipynb  Sandbox.ipynb  SystemDev.ipynb  TableDev.ipynb
pyPRISM/: Version.py  __init__.py  version.py
pyPRISM/calculate/: DK_density_correction.py  __init__.py  chi.py  initial_guess.py  pair_correlation.py  pmf.py  refDirectCorr.py  refTotalCorr.py  second_virial.py  solvation_potential.py  spinodal_condition.py  structure_factor.py
pyPRISM/closure/: AtomicClosure.py  Closure.py  HyperNettedChain.py  MartynovSarkisov.py  MeanSphericalApproximation.py  MolecularClosure.py  PercusYevick.py  ReferenceLariaWuChandler.py  ReferenceMolecularLinearPercusYevick.py  ReferenceMolecularMeanSphericalApproximation.py  ReferenceMolecularPercusYevick.py  __init__.py
pyPRISM/core/: Density.py  Diameter.py  Domain.py  IdentityMatrixArray.py  MatrixArray.py  PRISM.py  PairTable.py  Space.py  System.py  Table.py  ValueTable.py  __init__.py
pyPRISM/omega/: ABDiblockFreelyJointedChain.py  DiscreteKoyama.py  FreelyJointedChain.py  FromArray.py  FromFile.py  Gaussian.py  GaussianRing.py  InterMolecular.py  NoIntra.py  NonOverlappingFreelyJointedChain.py  Omega.py  SingleSite.py  __init__.py
pyPRISM/potential/: Exponential.py  HardCoreLennardJones.py  HardSphere.py  LennardJones.py  OZExponential.py  Potential.py  WeeksChandlerAndersen.py  __init__.py
pyPRISM/test/: CalcPRISM_test.py  Debyer_TestCase.py  Debyer_test.py  Density_TestCase.py  Density_test.py  Diameter_test.py  Domain_TestCase.py  Domain_test.py  Exponential_TestCase.py  Exponential_test.py  FreelyJointedChain_TestCase.py  FreelyJointedChain_test.py  FromArray_TestCase.py  FromArray_test.py  FromFile_test.py  GaussianRing_TestCase.py  GaussianRing_test.py  Gaussian_test.py  HardCoreLennardJones_test.py  HardSphere_test.py  (+18 more)
test/: Domain_TestCase.py  MatrixArray_TestCase.py
tests/: CalcPRISM_test.py  Debyer_test.py  Gaussian_test.py  LennardJones_test.py  System_test.py
tutorial/: NB0.Introduction.ipynb  NB1.PythonBasics.ipynb  NB2.Theory.General.ipynb  NB3.Theory.PRISM.ipynb  NB6.CaseStudies.Nanocomposites.ipynb  NB7.CaseStudies.Copolymers.ipynb  NB8.pyPRISM.Internals.ipynb  NB9.pyPRISM.Advanced.ipynb  jump_table.txt  tutorial.rst
typyPRISM/: Domain.py  IdentityMatrixArray.py  MatrixArray.py  PRISM.py  PairTable.py  Table.py  ValueTable.py  Version.py  __init__.py
(+294 files in other folders)
