[build-system]
requires = ["hatchling", "hatch-vcs", "numpy"]
build-backend = "hatchling.build"

[project]
name = "pyPRISM"
description = "A python tool for Polymer Reference Interaction Site Model (PRISM) calculations"
readme = "README.md"
requires-python = ">=3.9"
license-files = ["LICENSE"]
authors = [
    {name = "Tyler B. Martin", email = "tyler.martin@nist.gov"}
]
keywords = [
    "materials science",
    "polymer theory",
    "simulation",
    "X-ray",
    "neutron scattering",
    "liquid-state",
    "nanocomposite"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
dynamic = ["version"]
dependencies = [
    "numpy>=1.8.0",
    "scipy",
    "pint",
]

[project.urls]
Homepage = "https://github.com/usnistgov/pyprism"
Documentation = "http://pyPRISM.readthedocs.io"
Repository = "https://github.com/usnistgov/pyprism"
"Bug Reports" = "https://github.com/usnistgov/pyprism/issues"

[project.optional-dependencies]
dev = [
    "pytest",
]
docs = [
    "sphinx",
    "sphinx-autobuild",
    "sphinx_rtd_theme",
    "nbsphinx",
]

[tool.hatch.version]
source = "vcs"
tag-pattern = "v(?P<version>.*)"

[tool.hatch.build.hooks.vcs]
version-file = "pyPRISM/version.py"
template = '''# This file is auto-generated by hatch-vcs
__version__ = "v{version}"
version = "v{version}"
'''

[tool.hatch.build.targets.wheel]
packages = ["pyPRISM"]

[tool.hatch.build.targets.sdist]
include = [
    "/LICENSE",
    "/*.md",
    "/requirements.txt",
    "/env/*.yml",
    "/env/*.sh",
    # "/pyPRISM/trajectory/Debyer.pyx",
    "/pyPRISM/test/data/*",
    "/doc/**/*.rst",
    "/doc/Makefile",
]
